# agui-deepchat-integration

./: .gitignore  PUBLISHING.md  README.md  agent.py  agno_agent.py  pyproject.toml
.github/workflows/: publish.yml
ui/: .eslintrc.js  .npmignore  .parcelrc  README.md  index.html  package-demo.json  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.lib.json  vue.config.mjs
ui/public/: index.html
ui/src/: App.vue  ChatComponent.vue  constants.ts  global.d.ts  index.ts  main.ts  types.ts  utils.ts  vue-flags.ts
