[project]
name = "ag-ui-deepchat-poc"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "agno[agui,ddg,openai,sql]>=1.7.7",
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ruff>=0.12.4",
]
